--- a/gopher/golfer.service
+++ b/gopher/golfer.service
@@ -2,6 +2,6 @@
 Description=Golfer Server
 
 [Service]
-ExecStart=/usr/bin/python /home/traxys/python/micro-tiling/gopher/golfer.py
+ExecStart=<PATH>/micro-tiling/gopher/golfer.py
 WorkingDirectory=/home/traxys/python/micro-tiling/gopher
 StopWhenUnneeded=yes
