--- a/a_pi/a_pi.service
+++ b/a_pi/a_pi.service
@@ -4,6 +4,6 @@ After=millllllll.service
 Description=A PI
 
 [Service]
-ExecStart=/usr/bin/flask run
+ExecStart=FLASK_APP=main.py /usr/bin/flask run
 WorkingDirectory=<PATH>/micro-tiling/micro-tiling/a_pi
 StopWhenUnneeded=yes
