--- a/a_pi/Dockerfile
+++ b/a_pi/Dockerfile
@@ -1,5 +1,5 @@
 FROM tiangolo/uwsgi-nginx-flask:latest
 
-RUN pip install grpcio matrix_client protobuf
+RUN pip install grpcio protobuf
 
 COPY . /app
