--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,10 +3,7 @@ version: 2
 python:
   version: 3.7
   install:
-     - method: pip
-       path: Flask
-     - method: pip
-       path: grpcio
-     - method: pip
-       path: protobuf
+    - requirements: docs/requirements.txt
+    - method: pip
+       path: .
   system_packages: true
