--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -51,7 +51,7 @@ python-language-server==0.24.0
 python-utils==2.3.0
 pytoml==0.1.20
 pytz==2018.9
-pyudev==0.21.0.dev20180701
+pyudev==0.21.0
 PyVirtualDisplay==0.2.1
 requests==2.21.0
 retrying==1.3.3
