--- a/Millllllll/Dockerfile
+++ b/Millllllll/Dockerfile
@@ -2,6 +2,7 @@ FROM jfloff/alpine-python:latest
 
 RUN pip3 install grpcio
 RUN pip3 install protobuf
+RUN pip3 install psycopg2
 
 WORKDIR olala
 COPY . .
