--- a/Unitator/Dockerfile
+++ b/Unitator/Dockerfile
@@ -2,6 +2,7 @@ FROM leafney/alpine-selenium-firefox:latest
 
 RUN apk add python3 py-pip
 RUN pip3 install pyvirtualdisplay selenium
+RUN pip3 install psycopg2
 
 WORKDIR /app
 COPY . .
