--- a/Millllllll/Dockerfile
+++ b/Millllllll/Dockerfile
@@ -1,8 +1,9 @@
 FROM jfloff/alpine-python:latest
 
+RUN apk update
+RUN apk add py-psycopg2
 RUN pip3 install grpcio
 RUN pip3 install protobuf
-RUN pip3 install psycopg2
 
 WORKDIR olala
 COPY . .
