--- a/Translator/Dockerfile
+++ b/Translator/Dockerfile
@@ -1,6 +1,6 @@
 FROM tiangolo/uwsgi-nginx-flask:python3.6-alpine3.7
 
-RUN apk add gnupg
-RUN pip install pyinotify python-gnupg psycopg2
+RUN apk add gnupg py3-psycopg2
+RUN pip install pyinotify python-gnupg
 
 COPY . /app
