--- a/Unitator/Dockerfile
+++ b/Unitator/Dockerfile
@@ -1,8 +1,8 @@
 FROM leafney/alpine-selenium-firefox:latest
 
-RUN apk add python3 py-pip
+RUN apk update
+RUN apk add python3 py-pip py-psycopg2
 RUN pip3 install pyvirtualdisplay selenium
-RUN pip3 install psycopg2
 
 WORKDIR /app
 COPY . .
