Dockerfile and db update

--- a/Millllllll/Dockerfile
+++ b/Millllllll/Dockerfile
@@ -4,6 +4,7 @@ RUN apk update
 RUN apk add py-psycopg2
 RUN pip3 install grpcio
 RUN pip3 install protobuf
+RUN pip3 install python-etcd
 
 WORKDIR olala
 COPY . .
