--- a/Millllllll/Dockerfile
+++ b/Millllllll/Dockerfile
@@ -1,13 +1,11 @@
-FROM jfloff/alpine-python:latest
+FROM alpine:latest
 
-RUN apk update
-RUN apk add py-psycopg2
-RUN pip3 install grpcio
-RUN pip3 install protobuf
-RUN pip3 install python-etcd
+RUN apk add python python3 py3-pip py-pip build-base python3-dev
+RUN pip3 install grpcio protobuf python-etcd
+RUN pip install supervisor
 
 WORKDIR olala
 COPY . .
 
 EXPOSE 5001 3333
-CMD [ "./init.sh" ]
+ENTRYPOINT [ "supervisord", "--nodaemon", "--configuration", "/olala/supervisord.conf" ]
