--- a/a_pi/Dockerfile
+++ b/a_pi/Dockerfile
@@ -1,5 +1,12 @@
-FROM tiangolo/uwsgi-nginx-flask:latest
+FROM alpine:latest
 
-RUN pip install grpcio protobuf python-etcd
+RUN apk add python3 py3-pip python3-dev build-base
+RUN pip3 install Flask python-etcd grpcio protobuf
 
-COPY . /app
+WORKDIR /app
+COPY . .
+
+EXPOSE 80
+
+ENTRYPOINT [ "python3" ]
+CMD [ "app.py" ]
