--- a/Millllllll/supervisord.conf
+++ b/Millllllll/supervisord.conf
@@ -1,13 +1,14 @@
 [supervisord]
+nodaemon = true
 
 [program:gopher]
-command=python3 /olala/gopher/golfer.py
-redirect_stderr=true
+command = python3 -u gopher/golfer.py
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:millllllll]
-command=python3 /olala/millllllll.py
-redirect_stderr=true
+command=python3 -u millllllll.py
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
+redirect_stderr=true
