--- a/a_pi/Dockerfile
+++ b/a_pi/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk add python3 py3-pip python3-dev build-base
+RUN apk add python3 py3-pip python3-dev build-base dumb-init
 RUN pip3 install Flask python-etcd grpcio protobuf
 
 WORKDIR /app
@@ -8,5 +8,4 @@ COPY . .
 
 EXPOSE 80
 
-ENTRYPOINT [ "python3" ]
-CMD [ "app.py" ]
+ENTRYPOINT [ "/usr/bin/dumb-init", "--", "/app/start.sh" ]
