--- a/Millllllll/Dockerfile
+++ b/Millllllll/Dockerfile
@@ -10,6 +10,8 @@ COPY . .
 ENV DATABASE_HOST=localhost
 ENV DATABASE_PORT=2379
 
+RUN mkdir -p /olala/gopher/files
+
 EXPOSE 5001 3333
 
 ENTRYPOINT [ "supervisord", "-c", "/olala/supervisord.conf" ]
