--- a/Unitator/Dockerfile
+++ b/Unitator/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk add python py-pip curl unzip dbus-x11 ttf-freefont firefox-esr xvfb py-pip curl dbus-x11 ttf-freefont firefox-esr xvfb python3 py-pip py-psycopg2 dumb-init
+RUN apk add python py-pip curl unzip dbus-x11 ttf-freefont firefox-esr xvfb python3 dumb-init
 RUN pip3 install pyvirtualdisplay selenium pyvirtualdisplay python-etcd
 
 WORKDIR /app
