--- a/deployment/kubernetes/micro-tiling.yaml
+++ b/deployment/kubernetes/micro-tiling.yaml
@@ -202,7 +202,7 @@ spec:
               value: "etcd-cluster-client"
             - name: DATABASE_PORT
               value: "2379"
-            - name: SMTP_ADDR:
+            - name: SMTP_ADDR
               value: "cruxingator-service:8025"
 ---
 apiVersion: v1
@@ -318,5 +318,4 @@ spec:
         - name: ensicoincoin-pod
           image: johynpapin/ensicoincoin
           imagePullPolicy: Always
-          args:
-            - "--mining"
+          args: [ "--mining" ]
